# EllipseSegmentation

./: ArcExtraction.cpp  ArcGroup.cpp  CMakeLists.txt  FilterSkull.cpp  FindSegments.cpp  LineExtraction.cpp  LineSegment.cpp  README.md  ThetaEstimation.cpp  main.cpp
include/: ArcGroup.h  FilterSkull.h  LineSegment.h
